Fix nav overlap

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+section {
+    /* fixes nav obstructing sections when using anchors */
+    padding-top: 70px;
+    margin-top: -70px;
+}
+
 .feature {
     text-align: center;
 }
